Fix cart header spacing

--- a/app/assets/stylesheets/reservations/_cart_sidebar.css.scss
+++ b/app/assets/stylesheets/reservations/_cart_sidebar.css.scss
@@ -47,3 +47,8 @@
 		margin-bottom: 8px;
 	}
 }
+
+.cart-header h2 {
+  margin-top: 4px;
+  margin-bottom: 14px;
+}
